--- a/Section - 9/Project Management App/src/classes.html
+++ b/Section - 9/Project Management App/src/classes.html
@@ -4,8 +4,8 @@
 <input className="w-full p-1 border-b-2 rounded-sm border-stone-300 bg-stone-200 text-stone-600 focus:outline-none focus:border-stone-600" />
 <p className="flex flex-col gap-1 my-4">...</p>
 <label className="text-sm font-bold uppercase text-stone-500">...</label>
-<dialog className="backdrop:bg-stone-900/90 p-4 rounded-md shadow-md">...</dialog>
-<form className="mt-4 text-right">...</form>
+<!-- <dialog className="backdrop:bg-stone-900/90 p-4 rounded-md shadow-md">...</dialog> -->
+<!-- <form className="mt-4 text-right">...</form> -->
 <h2 className="text-xl font-bold text-stone-700 my-4">...</h2>
 <p className="text-stone-600 mb-4">...</p>
 <div className="w-[35rem] mt-16">...</div>
